--- a/style.css
+++ b/style.css
@@ -1134,6 +1134,10 @@
 		margin: 0px !important;
 	}	
 	
+	/* make sure buttons starts on new line on pages with the "Change your preferences to hide NSFW media?" box */
+	.over18.spoiler .flat-list.buttons {
+		   padding-top: 65px !important; 
+	}
 	
 	/******************************
 	********** Submit page ********
