--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+/* ==UserStyle==
+@name           Reddit Revamped
+@namespace      USO Archive
+@author         Decius
+@description    `A RES-friendly, clean, and minimal Reddit style for both Chrome and Firefox. Supports RES night mode.Based on a previous version of <a href = "http://userstyles.org/styles/71917/aerial-a-css-style-for-reddit-res-compatible">Reddit Aerial</a>.Suggestions/bug reports/comments/feedback are welcome at <a href = "mailto:redditrevamped@gmail.com">redditrevamped@gmail.com</a>. You can also check out the skin's code and changelog at <a href="https://github.com/BramVanRensbergen/reddit-revamped-css-style">github</a>.`
+@version        20210914.8.26
+@license        CC-BY-NC-SA-4.0
+@preprocessor   uso
+==/UserStyle== */
 @-moz-document domain('reddit.com') {
 	
 	/****************************
@@ -9,8 +18,7 @@
 	
 	/* comment out or remove the following line to restore the subreddit bar at the top of each page, containing your subscribed subreddits */
 	#sr-header-area {display: none;} #header {height: 25px !important;} #header-bottom-right {top: 2px !important;}
-	
-		
+			
 	/****************************
 	***** Removed Elements ******
 	****************************/    
@@ -2420,6 +2428,13 @@
 	/****************************
 	********** Varia ************
 	*****************************/  
+        
+    /* high res fixes */
+    @media (min-width: 2000px) {
+        #header, div.content, .with-listing-chooser.listing-chooser-collapsed div.content, .comments-page .content{ 
+            padding-left: 25% !important;
+        }
+    }
 	
 	.login-form-section button {
 	    margin: 7px !important;
@@ -2941,4 +2956,5 @@
 	    margin-right: 10px !important;
 	    color: #aaa !important;
 	}
+    
 }
