--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
 /* ==UserStyle==
 @name           Reddit Revamped
-@namespace      USO Archive
 @author         Decius
-@description    `A RES-friendly, clean, and minimal Reddit style for both Chrome and Firefox. Supports RES night mode.Based on a previous version of <a href = "http://userstyles.org/styles/71917/aerial-a-css-style-for-reddit-res-compatible">Reddit Aerial</a>.Suggestions/bug reports/comments/feedback are welcome at <a href = "mailto:redditrevamped@gmail.com">redditrevamped@gmail.com</a>. You can also check out the skin's code and changelog at <a href="https://github.com/BramVanRensbergen/reddit-revamped-css-style">github</a>.`
-@version        20210914.8.26
+@description    `A RES-friendly, clean, and minimal old Reddit style for both Chrome and Firefox. Supports RES night mode.`
+@version        20231203.1.1
 @license        CC-BY-NC-SA-4.0
 @preprocessor   uso
 ==/UserStyle== */
